<resources>
    <string name="app_name">Popular Movies</string>
    <string name="menu_message">Sort By:</string>
    <string name="most_popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcomig">Upcoming</string>
    <string name="latest">Latest</string>
    <string name="now_playing">Now Playing</string>
    <string name="synopsis">Plot Synopsis:</string>
</resources>