<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/most_popular"
        android:orderInCategory="2"
        android:iconTint="@color/colorAccent"
        android:icon="@drawable/ic_heart"
        android:title="@string/most_popular"
        android:titleCondensed="Popular"
        app:showAsAction="always|withText"/>
    <item android:id="@+id/top_rated"
        android:iconTint="@color/colorAccent"
        android:title="@string/top_rated"
        android:icon="@drawable/ic_star"
        app:showAsAction="always|withText" />
    <item android:id="@+id/upcoming"
        android:iconTint="@color/colorAccent"
        android:title="@string/upcomig"
        android:icon="@drawable/ic_star"
        app:showAsAction="never" />
    <item android:id="@+id/latest"
        android:iconTint="@color/colorAccent"
        android:title="@string/latest"
        android:icon="@drawable/ic_star"
        app:showAsAction="never" />
    <item android:id="@+id/now_playing"
        android:iconTint="@color/colorAccent"
        android:title="@string/now_playing"
        android:icon="@drawable/ic_star"
        app:showAsAction="never" />
</menu>